# agrobot

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/diffdrive_arduino/: package.xml
src/diffdrive_arduino/..git/: config  index  packed-refs
src/diffdrive_arduino/src/: diffdrive_arduino.cpp  fake_robot.cpp
src/modelo_robot/: package.xml  setup.cfg  setup.py
src/modelo_robot/config/: forwar_pub.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  my_controllers1.yaml  my_controllers2.yaml  my_controllersArticu.yaml  pos_controllers.yaml  trajectory_controller.yaml
src/modelo_robot/launch/: display.launch.py  gazebo.launch.py  gazebo2.launch.py  gazebo_pos_control.launch.py  gazebo_trajectory_control.launch.py  joystick.launch.py  pos_ctrl.launch.py  robot_real.launch.py  robot_realNo.launch.py  robotreal2.launch.py  rplidar.launch.py  rsp.launch.py  sim_launch.launch.py  test_pos_ctr.launch.py
src/modelo_robot/meshes/: apersor_link.STL  lindar_link.STL  rueda_der_trasera_link.STL  rueda_izq_trasera_link.STL
src/modelo_robot/modelo_robot/: aspersor.py  aspersor_no.py  joy_activator.py  position_ctrl.py  sensor_nivel.py
src/modelo_robot/rviz/: display.rviz  rviz.rviz
src/modelo_robot/urdf/: Ensamblaje_carro.urdf  control_arduino.xacro  ensamblaje.urdf  ensamblaje.xacro  gazebo_control.xacro  lidar.xacro  position_control.xacro  robot.urdf.xacro  robot2.urdf.xacro  robot_real.urdf.xacro  ros2_control.xacro  ros_control_robot2.xacro  trajectory_controller.xacro
src/modelo_robot/worlds/: mundo.world
(+21 files in other folders)
